# veyl.io

./: .gitignore  META_API_ENDPOINTS_AUDIT.md  README.md  call_link_endpoint.py  check_hashtag_links.py  railway.toml  requirements.txt  start.sh  test_hashtag_autolink.py
apps/slack-bot/: .gitignore  .pre-commit-config.yaml  pyproject.toml  pytest.ini  requirements.txt
apps/slack-bot/.github/workflows/: ci.yml
apps/slack-bot/config/: .coveragerc  __init__.py  config.example.py  config.py  google_credentials_setup.py  google_slides_credentials.example.json  monitoring.json  secrets.example.env
apps/slack-bot/custom/: path.csv
apps/slack-bot/docker/: Dockerfile  Dockerfile.dev  docker-compose.dev.yml  docker-compose.yml
apps/slack-bot/docs/: AZ-audit-checklist.md  FINANCIAL_MODEL.md  PRIVACY_POLICY.md  RGPD_COMPLIANCE.md  ai-llm-strategy.md  api-snapshot.md  current-state.md  data-model-lineage.md  dependencies-supply-chain.md  ops-deploy.md  product-vision-roadmap.md  security-legal.md  system-architecture.md
apps/slack-bot/resources/data/: veille.csv
apps/slack-bot/resources/prompts/: brand_overview.md  budget.md  executive_summary.md  hypotheses.md  ideas.md  insights.md  kpis.md  state_of_play.md  timeline.md  workshop_icebreakers.md  workshop_main.md  workshop_team_mechanics.md
apps/slack-bot/resources/schema/: brief_output_schema.json  (+3 more)
apps/slack-bot/schema/: brief_schema_en.json
apps/slack-bot/scripts/: add_test_markers.py  audit_code_quality.py  cleanup.sh  cleanup_dead_code.py  comprehensive_audit.py  create_template.py  deploy.sh  deploy_production.py  deploy_production.sh  fix_non_modular_data.py  fix_pytest_imports.py  generate_brief_pdf.py  intelligent_cleanup.py  production_setup.py  setup_dev.py  setup_scraping.sh
apps/slack-bot/src/: __init__.py
apps/slack-bot/tests/: README.md  __init__.py  conftest.py  dummy_data.py  dummy_env.py  pytest_simple.ini  test_env.txt
(+305 files in other folders)
